tests/algorithms/x/Python/hashes/sha256.py
# Code generated by Mochi transpiler.
# Version 0.10.60, generated on 2025-08-08 11:13 +0700
import hashlib

import sys
sys.set_int_max_str_digits(0)
import os
if os.path.dirname(__file__) in sys.path:
    sys.path.remove(os.path.dirname(__file__))


def panic(msg):
    raise Exception(msg)

HEX = "0123456789abcdef"
def byte_to_hex(b):
    hi = b // 16
    lo = b % 16
    return HEX[hi] + HEX[lo]
def bytes_to_hex(bs):
    res = ""
    i = 0
    while i < len(bs):
        res = res + byte_to_hex(bs[i])
        i = i + 1
    return res
print(bytes_to_hex(list(hashlib.sha256(bytes("Python")).digest())))
print(bytes_to_hex(list(hashlib.sha256(bytes("hello world")).digest())))
